--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <h3>Samnang Chhun</h3>
 
 <h4>@samnangchhun</h4></div>
-</div><div class="slide" data-transition="none"><div class="content about_me" ref="title/slide/2">
+</div><div class="slide" data-transition="fade"><div class="content about_me" ref="title/slide/2">
 <pre class="sh_ruby"><code>:about_me =&gt; {
   :name =&gt; "Samnang Chhun",
   :work_at =&gt; ["Yoolk Inc.", "Freelancer"],
