--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@ another_animal.speak
 <li>It's an anonymous class that you can't instantiate object from it</li>
 <li>It's hidden</li>
 <li>It is created automatically by the interpreter when you refer to it at the first time</li>
-<li>Except from those above, it works like normal classes
-Picture of the singleton class</li>
+<li>Except from those above, it works like normal classes</li>
 </ul>
 </div>
 </div><div class="slide" data-transition="scrollUp"><div class="content self bullets" ref="method_lookup/slide/1">
@@ -446,7 +445,7 @@ Picture of the singleton class</li>
 </ul>
 </div>
 </div><div class="slide" data-transition="scrollUp"><div class="content duck_typing_sample_code small" ref="duck_typing/slide/3">
-<pre class="sh_ruby"><code>class Dock
+<pre class="sh_ruby"><code>class Duck
   def quack
     puts "Quack!"
   end
@@ -476,7 +475,7 @@ but its awesome</li>
 </div><div class="slide" data-transition="scrollUp"><div class="content monkey_patching small" ref="monkey_patching/slide/2">
 <pre class="sh_ruby"><code>class Array
   def second
-    self[0]
+    self[1]
   end
 end
 
