--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Zero to Ruby</title>
+
+  <meta name="viewport" content="width=device-width"/>
 
   <link rel="stylesheet" href="./css/reset.css" type="text/css"/>
   <link rel="stylesheet" href="./css/showoff.css" type="text/css"/>
@@ -22,6 +24,7 @@
   <script type="text/javascript" src="./js/sh_main.min.js"></script>
   <script type="text/javascript" src="./js/core.js"></script>
   <script type="text/javascript" src="./js/showoffcore.js"></script>
+  <script type="text/javascript" src="./js/coffee-script.js"></script>
 
   <link type="text/css" href="./css/fg.menu.css" media="screen" rel="stylesheet" />
   <link type="text/css" href="./css/theme/ui.all.css" media="screen" rel="stylesheet" />
@@ -33,27 +36,29 @@
 
   <script type="text/javascript">
   $(function(){
-    setupPreso(false, './');
+      setupPreso(false, './');
   });
   </script>
+
 </head>
 
 <body>
-
 
 <a tabindex="0" href="#search-engines" class="fg-button fg-button-icon-right ui-widget ui-state-default ui-corner-all" id="navmenu"><span class="ui-icon ui-icon-triangle-1-s"></span>slides</a>
 <div id="navigation" class="hidden"></div>
 
 <div id="help">
   <table>
+    <tr><td class="key">z, ?</td><td>toggle help (this)</td></tr>
     <tr><td class="key">space, &rarr;</td><td>next slide</td></tr>
-    <tr><td class="key">&larr;</td><td>previous slide</td></tr>
-    <tr><td class="key">d</td><td>debug mode</td></tr>
+    <tr><td class="key">shift-space, &larr;</td><td>previous slide</td></tr>
+    <tr><td class="key">d</td><td>toggle debug mode</td></tr>
     <tr><td class="key">## &lt;ret&gt;</td><td>go to slide #</td></tr>
-    <tr><td class="key">c</td><td>table of contents (vi)</td></tr>
+    <tr><td class="key">c, t</td><td>table of contents (vi)</td></tr>
     <tr><td class="key">f</td><td>toggle footer</td></tr>
     <tr><td class="key">r</td><td>reload slides</td></tr>
-    <tr><td class="key">z</td><td>toggle help (this)</td></tr>
+    <tr><td class="key">n</td><td>toggle notes</td></tr>
+    <tr><td class="key">p</td><td>run preshow</td></tr>
   </table>
 </div>
 
@@ -144,14 +149,14 @@
 </div><div class="slide" data-transition="scrollUp"><div class="content ruby_version commandline incremental small" ref="installation/slide/3">
 <h1>Ruby version</h1>
 
-<pre><code><code class="command">$ ruby -v</code><code class="result">
-  ruby 1.9.2p180 (2011-02-18 revision 30909) [x86_64-darwin10.7.0]
+<pre><code><code class="command">$ ruby -v</code>
+<code class="result">  ruby 1.9.2p180 (2011-02-18 revision 30909) [x86_64-darwin10.7.0]
 </code></code></pre></div>
 </div><div class="slide" data-transition="scrollUp"><div class="content irb commandline incremental" ref="irb/slide/1">
 <h1>Interactive Ruby Shell</h1>
 
-<pre><code><code class="command">$ irb</code><code class="result">
-ruby-1.9.2-p180 :001 &gt; puts "I love Ruby!"
+<pre><code><code class="command">$ irb</code>
+<code class="result">ruby-1.9.2-p180 :001 &gt; puts "I love Ruby!"
 I love Ruby!
  =&gt; nil
 </code></code></pre></div>
@@ -380,11 +385,11 @@ another_animal.speak
 </div><div class="slide" data-transition="scrollUp"><div class="content object_model center" ref="classes_and_modules/slide/7">
 <h1>Object model for a basic class</h1>
 
-<p><img src="file:///Volumes/Documents/Work/Personal/zero-to-ruby-course/classes_and_modules/object_model_for_a_basic_class.png" alt="Object model for a basic class"/></p></div>
+<p><img src="./file/classes_and_modules/object_model_for_a_basic_class.png" alt="Object model for a basic class"/></p></div>
 </div><div class="slide" data-transition="scrollUp"><div class="content singleton_class center" ref="classes_and_modules/slide/8">
 <h1>Singleton class involved</h1>
 
-<p><img src="file:///Volumes/Documents/Work/Personal/zero-to-ruby-course/classes_and_modules/singleton_class.png" alt="Singleton class"/></p></div>
+<p><img src="./file/classes_and_modules/singleton_class.png" alt="Singleton class"/></p></div>
 </div><div class="slide" data-transition="scrollUp"><div class="content what_is_single_class bullets center" ref="classes_and_modules/slide/9">
 <p class="notes">demo how to access singleton class in Ruby 1.8 and Ruby 1.9</p>
 
@@ -435,7 +440,7 @@ another_animal.speak
 
 <h2>If it walks like a duck, and talks like a duck,Then we can treat it like a duck. (who cares what it really is)</h2>
 
-<p><img src="file:///Volumes/Documents/Work/Personal/zero-to-ruby-course/duck_typing/duck.jpeg" alt="Duck Typing"/></p></div>
+<p><img src="./file/duck_typing/duck.jpeg" alt="Duck Typing"/></p></div>
 </div><div class="slide" data-transition="scrollUp"><div class="content duck_typing bullets" ref="duck_typing/slide/2">
 <h1>Duck Typing</h1>
 
