--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ def animal.speak
   puts "The #{self} says miaow"
 end
 
-an_array.speak # The cat says miaow
+animal.speak # The cat says miaow
 another_animal.speak 
 # NoMethodError: undefined method `speak' for "dog":String</code></pre></div>
 </div><div class="slide" data-transition="scrollUp"><div class="content object_model center" ref="classes_and_modules/slide/7">
